--- a/inventario/templates/inventario/componentes/pc.html
+++ b/inventario/templates/inventario/componentes/pc.html
@@ -17,6 +17,8 @@
         {% if pc.EsModulo %}
             <p class="card-text text-center">Módulo</p>
         {% endif %}
-        <a href="/pc/{{ pc.id }}" class="btn btn-primary" style="margin: auto">{% include 'inventario/iconos/ver.html' %}</a>
+
+        <a href="/pc/{{ pc.id }}" class="btn btn-primary"
+           style="margin: auto">{% include 'inventario/iconos/ver.html' %}</a>
     </div>
 </div>
