trabajanod en los filtros

--- a/inventario/templates/inventario/index.html
+++ b/inventario/templates/inventario/index.html
@@ -10,9 +10,9 @@
 {#    {{ user.has_perm.inventario }}#}
 {#        {{ perms }}#}
 {#        {{user.has_perms.inventario}}#}
-    {% if 'inventario' in perms %}
-    {% if 'inventario.add_cpu' in perms %}
-        <p>In lookup works, too.</p>
-    {% endif %}
-{% endif %}
+{#    {% if 'inventario' in perms %}#}
+{#    {% if 'inventario.add_cpu' in perms %}#}
+{#        <p>In lookup works, too.</p>#}
+{#    {% endif %}#}
+{#{% endif %}#}
 {% endblock %}
