--- a/inventario/templates/inventario/infoCOmponent.html
+++ b/inventario/templates/inventario/infoCOmponent.html
@@ -1,8 +1,8 @@
 {% load static %}
-<div class="container mt-4">
+<div class="container-fluid mt-4">
     <div class="row">
         <div class="col">
-            <div class="card" style="border: none">
+            <div class="card" style="border: none; width: 250px">
                 <img src="{% static 'inventario/img/index/juego-de-azar.png' %}" class="card-img-top" alt="...">
                 <div class="card-body text-center">
                     <h5 class="card-title text-center">Computadoras</h5>
@@ -12,7 +12,7 @@
             </div>
         </div>
         <div class="col">
-            <div class="card" style="border: none">
+            <div class="card" style="border: none; width: 250px">
                 <img src="{% static 'inventario/img/index/impresora (1).png' %}" class="card-img-top" alt="...">
                 <div class="card-body text-center">
                     <h5 class="card-title text-center">Impresoras</h5>
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="col">
-            <div class="card" style="border: none">
+            <div class="card" style="border: none; width: 250px">
                 <img src="{% static 'inventario/img/index/servidor.png' %}" class="card-img-top" alt="...">
                 <div class="card-body text-center">
                     <h5 class="card-title text-center">Computadoras en Red</h5>
