--- a/inventario/templates/layout.html
+++ b/inventario/templates/layout.html
@@ -19,5 +19,6 @@
 <script src="{% static 'inventario/js/jquery-3.5.1.slim.js' %}"></script>
 <script src="{% static 'inventario/js/popper.js' %}"></script>
 <script src="{% static 'inventario/js/bootstrap.js' %}"></script>
+<script src="{% static 'inventario/js/main.js' %}"></script>
 </body>
 </html>
