--- a/inventario/templates/inventario/pc_list.html
+++ b/inventario/templates/inventario/pc_list.html
@@ -3,46 +3,75 @@
 {% load static %}
 
 {% block content %}
-    <form action="/pc/list" method="POST">
-        <h3>Pc por numero de Inventario:</h3>
-        <input name="inventario" value="0" style="width:40px">
-        <input type="submit" value="Filtrar">
-        {% csrf_token %}
-    </form>
-    <form action="/pc/list" method="POST">
-        <h3>Pc por So:</h3>
-{#        <input name="so" value="Windows Xp">#}
-        <div class="form-group col-md-4">
-            <label for="inputState">State</label>
-            <select id="inputState" name="so" class="form-control">
-                <option selected>Choose...</option>
-                <option>Windows Xp</option>
-                <option>Linux</option>
-            </select>
-        </div>
-        <input type="submit" value="Filtrar">
-        {% csrf_token %}
-    </form>
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
-            {% for pc in pc %}
-                <div class="col">
-                    <div class="card mycard">
-                        <img src="{% static 'inventario/img/area/016-pc.png' %}" class="card-img-top myimg" alt="...">
-                        <div class="card-body text-center">
-                            <p class="card-text text-center">NO Inventario <span
-                                    class="badge badge-primary"> {{ pc.numeroDeInventario }}</span>
-                            </p>
-                            <p class="card-text text-center">Sistema Operativo: {{ pc.SO }}</p>
-                            <p class="card-text text-center">Responsable: {{ pc.responsable }}</p>
-                            <p class="card-text text-center">En red: {{ pc.enRed }}</p>
-                            <a href="/pc/{{ pc.id }}" class="btn btn-primary" style="margin: auto">Ver</a>
+            <div class="col">
+                <div id="mySidenav" class="sidenav">
+                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                    <form action="/pc/list" method="POST">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col">
+                                    <label for="inventario">No Inventario</label>
+                                    <input name="inventario" value="0" style="width:40px">
+                                    <input type="submit" value="Filtrar">
+                                    {% csrf_token %}
+                                </div>
+                            </div>
                         </div>
-                    </div>
+
+
+                        <div class="container">
+                            <div class="row">
+                                <div class="col">
+                                    <div class="form-group">
+                                        <label for="inputState">Sistema Operativo</label>
+                                        <select id="inputState" name="so" class="form-control">
+                                            <option selected>Todos</option>
+                                            {% for so in sistemaOpertivo %}
+                                                <option>{{ so.nombre }}</option>
+                                            {% endfor %}
+                                        </select>
+                                    </div>
+                                    <input type="submit" value="Filtrar">
+                                    {% csrf_token %}
+                                </div>
+                            </div>
+                        </div>
+
+                    </form>
                 </div>
-
-            {% endfor %}
-
+            </div>
         </div>
     </div>
+    <!-- Use any element to open the sidenav -->
+    <span onclick="openNav()">Buscar</span>
+
+    <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
+    <div id="main">
+        <div class="container-fluid">
+            <div class="row">
+                {% for pc in pc %}
+                    <div class="col">
+                        <div class="card mycard">
+                            <img src="{% static 'inventario/img/area/016-pc.png' %}" class="card-img-top myimg"
+                                 alt="...">
+                            <div class="card-body text-center">
+                                <p class="card-text text-center">NO Inventario <span
+                                        class="badge badge-primary"> {{ pc.numeroDeInventario }}</span>
+                                </p>
+                                <p class="card-text text-center">Sistema Operativo: {{ pc.SO }}</p>
+                                <p class="card-text text-center">Responsable: {{ pc.responsable }}</p>
+                                <p class="card-text text-center">En red: {{ pc.enRed }}</p>
+                                <a href="/pc/{{ pc.id }}" class="btn btn-primary" style="margin: auto">Ver</a>
+                            </div>
+                        </div>
+                    </div>
+
+                {% endfor %}
+
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
